# ms_order

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_05_05_2118-5ada594929e0_first_migrate_order_and_irder_item.py  2025_05_10_2011-d7feec593639_update_dish_name_and_unit_price.py
src/api/: main.py
src/api/basket/: routers.py  schemas.py
src/api/order/: routers.py  schemas.py
src/infra/: di.py
src/infra/database/: sqlalchemy.py
src/infra/database/models/: __init__.py  order.py  order_item.py
src/infra/message_broker/: base.py  consumer.py  handlers.py  producer.py
src/infra/repositories/: base_repository.py  item_order_repository.py  order_repository.py
src/settings/: config.py
