[project]
name = "ms-order"
version = "0.1.0"
description = ""
authors = [
    {name = "kirill43qw",email = "default11user@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standart] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

